# cpp_back_to_basics

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  EventEmitter.h  README.md  a.cc  capture.cpp  clean.ps1  color.cpp  config.ps1  deleted_methods.cpp  enable_if.cpp  fltk_test.cpp  format.cpp  hello.cpp  hello_world.cpp  http_client.cpp  http_client_boost.cpp  http_server_sync.cpp  lambda_test.cpp  limits.cpp  main.cpp  omp.c  print_hello.cpp  ranges.cpp  ref.cpp  std_any.cpp  std_function.cpp  t.py  test_limits.cpp  test_qt.cpp  test_qt_2.cpp  test_ranges.cpp  test_string.cpp  timer.cpp  tu-1.cpp  tu-2.cpp
enc_temp_folder/4584533a74f77cbe583f16eb2bd8f6/: http_client_boost.cpp
